fixed misalignment in about

--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,6 @@ html {
     align-items: center;
     justify-content: space-around;
     margin: 0 auto;
-    width: 100%;
     height: 100%;
   }
 
